--- a/adr6demo.ipynb
+++ b/adr6demo.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "monthly-absolute",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "periodic-strengthening",
+   "execution_count": 1,
+   "id": "pending-hungary",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Voila Web App\n",
+    "\n",
+    "## A website built out of a Jupyter notebook using Voila\n",
+    "\n",
     "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
     "Created on Sat Jan  2 12:03:39 2021\n",
@@ -117,6 +113,14 @@
     "        os.remove('temp.mp3')\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "surprising-pavilion",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
